--- a/hellorootkitty.tex
+++ b/hellorootkitty.tex
@@ -468,8 +468,8 @@ tsp & 36.14 & 36.24 & 0.27\% \\
 
 
 \paragraph{Memory overhead} \label{memory}
-Naturally, memory overhead is proportional to the number of objects to be protected. The data structure needed to store information for integrity checking is 20 bytes long for each object (64-bit kernel object physical address, 32-bit kernel object size, 32-bit checksum, 32-bit support flags used by the hypervisor)\footnote{In order to repair the compromised object, the hypervisor needs to store the object's original content too. This may increase the memory overhead.}.  
-Therefore, protecting 15,000 objects costs 293KB in terms of memory space when the original content has not been provided and 2168 KB otherwise. 
+Naturally, memory overhead is proportional to the number of objects to be protected. The data structure needed to store information for integrity checking is 32 bytes long for each object (64-bit kernel object physical address, 32-bit kernel object size, 128-bit checksum, 32-bit support flags used by the hypervisor)\footnote{In order to repair the compromised object, the hypervisor needs to store the object's original content too. This may increase the memory overhead.}.  
+Therefore, protecting 15,000 objects costs 469KB in terms of memory space when the original content has not been provided and 2344 KB otherwise. 
 
 Moreover, every time a subset of the list of objects is checked the hypervisor needs to map each object from the guest physical space to its virtual space. As explained, the hypervisor will map 100 objects of 128 bytes each every time a MOV\_CR event is trapped. This adds an additional cost of 13KB. Thus the overall cost in terms of memory is approximately 306KB (2181KB if a copy of the original content is provided for each object). 
 Since the regular hypervisor allocates 128MB at system startup, the overall memory impact amounts to 1.7\%. 
@@ -580,12 +580,12 @@ Copilot \cite{copilot} is a kernel integrity monitor which detects illegal modif
 In a testbed similar to the one we propose in our solution, which consists in performing checking of kernel data  every 5 seconds, the overall performance impact has been measured to 3.80\% (WebStone throughput results) compared to the performance of a native system.   
 Another shortcoming of Copilot is represented by access limited to main memory: there is no way for Copilot to inspect CPU registers, since it is not possible to pause the CPU's execution of the target system. In our solution, whenever control is returned to the hypervisor, which performs kernel integrity checking, the guest system is paused. A snapshot of the register set of a paused system can be inspected in hypervisor space relatively easily. In our prototype we check the integrity of the Interrupt Descriptor Table Register (IDTR). It goes without saying that the entire register set of the guest machine can be checked with the same mechanism. 
 Because Copilot accesses host memory via the PCI bus, there are chances to find kernel data structures in an inconsistent state whenever the monitor performs a DMA access (direct access to physical memory) and a process is modifying them at the same time. Our solution avoids race conditions of this type by invalidating the virtual to physical mapping in the TLB upon returning control to the guest operating system. Specifically, when the hypervisor is repairing (writing) a compromised kernel structure, a process that was using that data before will find an inconsistency. However invalidating the virtual-physical address mapping will force the process to remap the new content stored at the physical address.
-The strategy of checking integrity every 30 seconds makes the Copilot monitor susceptible to timing attacks. A rootkit that compromises kernel data and rapidly repairs it will stay unnoticed. Although our mitigation technique is affected by the same problem, we provide a probabilistic analysis that shows the chances of successful timing attacks under several conditions.
+The strategy of checking integrity every 30 seconds makes the Copilot monitor susceptible to timed attacks. A rootkit that compromises kernel data and rapidly repairs it will stay unnoticed. Although our mitigation technique is affected by the same problem, we provide a probabilistic analysis that shows the chances of successful timed attacks under several conditions.
 
 \paragraph{Gibraltar}
 A system that, similarly to the one described in the previous sections, detects violation of kernel data structures integrity is Gibraltar \cite{6}. Gibraltar executes on a separate machine, called the observer, and monitors the integrity of the kernel running in another machine, physically separated, called the target. Both the observer and the target are connected by the Myrinet PCI intelligent network card. Within such an architecture the observer can remotely access the physical pages of the target kernel. Gibraltar is formed by three main components: the page fetcher, the invariant generator engine and the monitor. The page fetcher, which executes on the observer, fetches the page of a given memory address of the target, where the PCI card has been installed. The PCI device initiates a DMA request for the requested page and send the content back to the observer.
 The invariant generator engine, which executes in the observer, generates a list of invariants that conform to several templates, such as membership ($x \in a,b,c$), nonzero ($x \neq 0$), bounds ($x \geq c$, $x \leq c$), etc. The monitor ensures that the list of observed data structures in the memory of the target system satisfy the invariants inferred by the invariant generator engine.
-One limitation of Gibraltar is represented by the fact that pages are fetched and monitored asynchronously. Due to the consistent delay between fetching and monitoring, the chances of timing attacks are considerably high.
+One limitation of Gibraltar is represented by the fact that pages are fetched and monitored asynchronously. Due to the consistent delay between fetching and monitoring, the chances of timed attacks are considerably high.
 However, the main limitation is represented by the isolation requirement which is fulfilled by executing the monitor and the target systems within two physically separated machines. The need of special hardware and the overall performance penalty, make Gibraltar not suitable for production systems.  
 
 %FIXME from gibraltar paper  related work TPM can detect certain kinds of rootkits that modify kernel code and critical data structures, but not arbitrary kernel data structures.
