--- a/Cover.tex
+++ b/Cover.tex
@@ -8,9 +8,9 @@
 \begin{document}
 \degree{INF}
 
-\monthyear{January 2013}
+\monthyear{July 2013}
 
-\title{TO BE DEFINED Virtualization-aware security strategies}
+\title{Virtualisation-based countermeasures within runtime software systems}
 \sidetitle{}
 
 \graduate{Francesco GADALETA}
@@ -18,9 +18,8 @@
 \udc{681.3$\ast$C21}
 
 \firstcoverpage{%
-	Promotoren : Wouter Joosen\\ 
-	Dr. ir. Y. VERBAETEN \\ 
-	Prof. Dr. ir. W. JOOSEN
+	Promotoren : Prof. Wouter Joosen\\ 
+	Prof. Frank Piessens
 }
 \secondcoverpage{%
          Jury :\\ 
