--- a/biblio.bib
+++ b/biblio.bib
@@ -2450,7 +2450,7 @@ publisher = {IEEE Computer Society},
 @inproceedings{Gadaleta2009,
 	author = {Gadaleta, Francesco and Younan, Yves and Jacobs, Bart and Joosen, Wouter and De Neve, Erik and Beosier, Nils},
 	title = {Instruction-level countermeasures against stack-based buffer overflow attacks},
-	booktitle = {Eurosys},
+	booktitle = {VDTS '09 Proceedings of the 1st EuroSys Workshop on Virtualization Technology for Dependable Systems},
 	year = {2009},
  pages = {7--12},
  publisher = {ACM},
